--- a/cbpolicydWEB/front-end/package.json
+++ b/cbpolicydWEB/front-end/package.json
@@ -23,6 +23,9 @@
     "@angular/platform-server": "^2.1.2",
     "@angular/router": "3.1.2",
     "@angular/upgrade": "2.1.2",
+    "angular-in-memory-web-api": "^0.1.13",
+    "angular2-modal": "^2.0.2",
+    "angular2-select": "^1.0.0-alpha.12",
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
     "datepicker": "0.0.0",
@@ -30,14 +33,15 @@
     "moment": "^2.15.2",
     "ng2-bootstrap": "^1.1.16",
     "ng2-datepicker": "^1.1.1",
+    "ng2-material-select": "^0.1.4",
     "reflect-metadata": "^0.1.8",
     "rxjs": "^5.0.0-beta.12",
     "systemjs": "0.19.40",
     "zone.js": "^0.6.26"
   },
   "devDependencies": {
-    "@types/chai": "^3.4.34",
     "concurrently": "^3.1.0",
+    "@types/chai": "^3.4.34",
     "lite-server": "^2.2.2",
     "typescript": "^2.0.6",
     "typings": "^1.4.0"
